# Fabric-Foundry-Insight-Presentation-Agents

./: .gitignore  LICENSE.md  README.md  deploy.ps1
.github/workflows/: ci.yml  deploy.yml
agents/: conversational_agent.py  deploy.py  mbr_presentation_agent.py  presentation_agent.py  requirements.txt
apps/insights-ui/src/: index.css
apps/mbr-api/: Dockerfile  pyproject.toml  sample.env
apps/mbr-api/src/: config.py  fabric.py  main.py  models.py  storage.py  utils.py
apps/mbr-api/src/routes/: analytics.py  conversations.py  downloads.py  health.py  kpis.py  presentations.py  templates.py
apps/mbr-tools-mcp/: Dockerfile  pyproject.toml  sample.env
apps/mbr-tools-mcp/src/: config.py  main.py
apps/mbr-tools-mcp/src/tools/: library_tools.py  powerpoint_tools.py
apps/mbr-ui/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  sample.env  vite.config.js
apps/mbr-ui/src/: App.jsx  api.js  config.js  index.css
data/templates/: README.md  mbr_template.pptx
data/templates/thumbnails/: README.md
docs/: deployment_steps.md  fabric-setup.md
fabric/scripts/: seed_data.py  setup_lakehouse.py
infra/: main.tf  outputs.tf  providers.tf  terraform.tfvars.tpl  variables.tf
infra/modules/ai_services/: main.tf  (+2 more)
samples/: LONGHAUL-MBR-South-May2025.pptx
scripts/: Deploy-Containers.ps1  Deploy-FabricDataAgent.ps1  Deploy-FabricLakehouse.ps1  Deploy-FabricWorkspace.ps1  Deploy-FoundryAgents.ps1  Deploy-Infrastructure.ps1  New-GitHubOidc.ps1  inspect_template.py
scripts/common/: DeploymentFunctions.psm1
(+38 files in other folders)
