[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mbr-tools-mcp"
version = "0.1.0"
description = "LONGHAUL FastMCP tool server — PowerPoint generation and deck library"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "pydantic-settings>=2.6",
    "azure-identity>=1.19",
    "azure-storage-blob>=12.23",
    "python-pptx>=1.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
